<resources>
    <string name="app_name">IWBle</string>
    <string name="app_name_1">IWBle</string>
    <string name="view_title">BLE-APP</string>
    <string name="unknown_device">Unknown device</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_device_info">DeviceInfoActivity</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="label_device_name">Device name:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_device_type_bracelet">Bracelet</string>
    <string name="menu_device_type_watch">Watch</string>
    <string name="menu_device_type_color_screen"></string>
    <string name="menu_suggest">Feedback</string>
    <string name="menu_about_us">Abount</string>
    <string name="menu_ble_device_list">Function list</string>
    <string name="pls_select_sdk_type">Please click the left menu to select the type of the link.
    </string>
    <string name="pls_unbind_bracelet">Please click the left menu to unbind the bracelet</string>
    <string name="pull_to_refresh">Pull to Refresh</string>
    <string name="pull_to_refresh_scan">Scanning...</string>
    <string name="pull_to_refresh_load">Loading...</string>
    <string name="pull_to_refresh_push">Release refresh</string>
    <string name="pull_to_refresh_success">refresh success</string>
    <string name="pull_to_refresh_fail">refresh fail</string>
    <string name="pull_to_refresh_time">last update M-d HH:mm</string>
    <string name="title_device_list">Device</string>
    <string name="title_device_setting">Bracelet Setting</string>
    <string name="title_device_data">Sport Data</string>
    <string name="index_device_name">Device Name:%s</string>
    <string name="index_device_mac">Device Address:%s</string>
    <string name="index_device_status_connect">Connect</string>
    <string name="index_device_status_disconnect">Disconnect</string>
    <string name="index_device_status">Connect Statue:%s</string>
    <string name="index_device_battery">Battery:%s</string>
    <string name="index_device_model">model:%s</string>
    <string name="index_device_version">version:%s</string>
    <string name="index_device_sn">sn:%s</string>
    <string name="index_sport_step">Steps:%s</string>
    <string name="index_sport_distance">Distance:%.1f m</string>
    <string name="index_sport_calorie">Calorie:%.1f KCal</string>
    <string name="index_device_unbind">Unbind</string>
    <string name="index_device_connect">Connect</string>
    <string name="index_device_disconnect">Disconnect</string>
    <string name="index_device_notification">Notification</string>
    <string name="index_device_ble_log">BLE log</string>
    <string name="index_device_ble_firmware">DFU help</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="scan_connect_device">Connecting:%s</string>
    <string name="no_disturb">No Disturb All Day</string>
    <string name="no_disturb_when_sleep">No Disturb When Sleep</string>
    <string name="no_disturb_as_time_segment">No Disturb Accroiding Time</string>
    <string name="get_disturb_setting_info">Get No-Disturb Setting Info</string>
    <string name="clear_no_disturb_settings">Clear No-Disturb Settings</string>
    <string name="write_alarm">Write Alarm</string>
    <string name="close_alarm">Close Alarm</string>
    <string name="alarm_info">Alarm Info</string>
    <string name="write_schedule">Write Schedule</string>
    <string name="close_schedule">Close Schedule</string>
    <string name="clear_all_schedule">Clear All Schedule</string>
    <string name="get_schedule_info">Get Schedule Support Info</string>
    <string name="write_sedentary">Write Sedentary</string>
    <string name="get_sedentary">Get Sedentary Info</string>
    <string name="selfia">Selfia</string>
    <string name="setting_shake">Experience Vibration Remind</string>
    <string name="real_setting_shake">Set Vibration Remind</string>
    <string name="setting_time">Time format</string>
    <string name="blood_setting">blood</string>
    <string name="setting_date">Date format</string>
    <string name="setting_unit">Unit of measurement</string>
    <string name="setting_weather">Unit of Weather</string>
    <string name="setting_roll">Palming gestures</string>
    <string name="setting_roll_time">Palming gestures hours</string>
    <string name="setting_hand">Wearing Manner</string>
    <string name="setting_language">Language</string>
    <string name="setting_firmware_update">Firmware Upgrade</string>
    <string name="setting_swim">Swim</string>
    <string name="setting_auto_hr">Auto-Hr</string>
    <string name="setting_auto_sleep">Auto-Sleep</string>
    <string name="setting_smart_track">SmartTrack</string>
    <string name="write_a_weather">Write a Weather</string>
    <string name="write_user_info">Write UserInfo</string>
    <string name="push_a_message">Push a Message</string>
    <string name="push_a_call_message">Push a Teleyphone Message</string>
    <string name="setting_dialog_confirm">Confirm</string>
    <string name="setting_dialog_cancel">Cancel</string>
    <string name="setting_dialog_time_24">24h</string>
    <string name="setting_dialog_time_12">12h</string>
    <string name="setting_dialog_date_1">Month/Day</string>
    <string name="setting_dialog_date_2">Day/Month</string>
    <string name="setting_dialog_unit_1">Metric</string>
    <string name="setting_dialog_unit_2">Imperial</string>
    <string name="setting_dialog_weather_1">Centigrade</string>
    <string name="setting_dialog_weather_2">Fahrenheit</string>
    <string name="setting_dialog_hand_1">Left</string>
    <string name="setting_dialog_hand_2">Right</string>
    <string name="setting_dialog_language_1">English</string>
    <string name="setting_dialog_language_2">Chinese</string>
    <string name="shake_1">Staccato</string>
    <string name="shake_2">Wave</string>
    <string name="shake_3">Heartbeat</string>
    <string name="shake_4">Radiation</string>
    <string name="shake_5">Lighthouse</string>
    <string name="shake_6">Symphony</string>
    <string name="shake_7">Fast</string>
    <string name="heart_title">HeartRate</string>
    <string name="heart_curr_value">HeartRate:%s</string>
    <string name="heart_detail_data_title">HeartRateDetail</string>
    <string name="r1_data_title">R1 List</string>
    <string name="r1_detail_data_title">R1 Detail</string>
    <string name="sport_title">SportDetail</string>
    <string name="r1_title">R1 Sport</string>
    <string name="zg_gps_data_title">Gps msg list</string>
    <string name="zg_gps_data">GPS data</string>
    <string name="zg_agps_data">AGPS update</string>
    <string name="pb_ecg_data">ECG</string>
    <string name="zg_gps_detail_data_title">GPS Detail</string>
    <string name="sport_plan_football">Soccer</string>
    <string name="sport_plan_basketball">Basketball</string>
    <string name="sport_plan_badminton">Badminton</string>
    <string name="sport_plan_pingpong">Table Tennis</string>
    <string name="sport_plan_bowling">Bowling</string>
    <string name="sport_plan_tennis">Tennis</string>
    <string name="sport_plan_volleyball">Volleyball</string>
    <string name="sport_plan_shuttlecock">Shuttlecock</string>
    <string name="sport_plan_swimming">Swimming</string>
    <string name="sport_plan_mountaineering">Mountain</string>
    <string name="sport_plan_walking">Walking</string>
    <string name="sport_plan_running">Running</string>
    <string name="sport_plan_cycling">Cycling</string>
    <string name="sport_plan_climbing">Climbing</string>
    <string name="sport_plan_skate">Skate</string>
    <string name="sport_plan_skee">Skee</string>
    <string name="sport_plan_dance">Dance</string>
    <string name="sport_plan_bodymechanics">Aerobics</string>
    <string name="sport_plan_pullup">Pull-up</string>
    <string name="sport_plan_gymnasium">Gymnasium</string>
    <string name="sport_plan_situp">Sit-up</string>
    <string name="sport_plan_pushup">Push-up</string>
    <string name="sport_plan_slap">Plank</string>
    <string name="sport_plan_yoga">Yoga</string>
    <string name="sport_plan_jump">Rope-jump</string>
    <string name="sport_detail_start_time">StartTime:%s</string>
    <string name="sport_detail_end_time">EndTime:%s</string>
    <string name="sleep_title">Sleep</string>
    <string name="sleep_title_detail">Sleep Detail</string>
    <string name="sleep_detail_total">SleepTotalTime:%s</string>
    <string name="sleep_detail_light">LightSleepTime:%s</string>
    <string name="sleep_detail_deep">DeepSleepTime:%s</string>
    <string name="sleep_detail_weak">WeakSleepTime:%s</string>
    <string name="sleep_detail_start">Start</string>
    <string name="sleep_detail_end">End</string>
    <string name="sleep_detail_deep_1">Deep Sleep</string>
    <string name="sleep_detail_light_1">Light Sleep</string>
    <string name="sleep_detail_weak_1">Weak Sleep</string>
    <string name="sleep_detail_placement">Placement</string>
    <string name="sync_progress_text">sync data:%s</string>
    <string name="sync_progress_text1">sync %1$s data:%2$s</string>
    <string name="sync_progress_text_over">sync over</string>
    <string name="sync_progress_text_start">Start synchronization</string>
    <string name="sync_progress_text_update">Firmware</string>
    <string name="sync_progress_text_select_file">Select firmware upgrade file</string>
    <string name="sync_progress_text_start_upgrade">Start Update</string>
    <string name="sync_progress_text_path">file path:%s</string>
    <string name="dfu_action_abort">stop</string>
    <string name="dfu_confirmation_dialog_title">app upgrade</string>
    <string name="dfu_status_switching_to_dfu">dfu&#8230;</string>
    <string name="dfu_status_connecting">connecting&#8230;</string>
    <string name="dfu_status_starting">Starting DFU&#8230;</string>
    <string name="dfu_status_uploading">Uploading&#8230;</string>
    <string name="dfu_status_uploading_part" formatted="false">progress %d/%d&#8230;</string>
    <string name="dfu_status_validating">Validating&#8230;</string>
    <string name="dfu_status_disconnecting">disconnect&#8230;</string>
    <string name="dfu_status_completed">completed</string>
    <string name="dfu_status_aborted">Aborted</string>
    <string name="dfu_status_error">Upload failed</string>
    <string name="normal_wrist">WristBand</string>
    <string name="zg_wrist">Color WristBand</string>
    <string name="sport_watch">Sport-Watch</string>
    <string name="protobuf_band">ProtoBuf band</string>
    <string name="select_sdk_tip">Please select Sdk-type according your device</string>
    <string name="message_push_call">Call</string>
    <string name="message_push_sms">Sms</string>
    <string name="message_push_wechat">wechat</string>
    <string name="message_push_skype">skype</string>
    <string name="message_push_facebook">facebook</string>
    <string name="setting_shake_bracelet">Vibration setting mode</string>
    <string name="setting_shake_alarm">Alarm</string>
    <string name="setting_shake_schedule">Schedule</string>
    <string name="setting_shake_calendar">Calendar</string>
    <string name="index_device_ble_dfu">DFU help</string>
    <string name="setTime">set time and default weather</string>
    <string name="setAutoSport">auto sport</string>
</resources>