<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SwitchSdkTypeActivity">

    <Button
        android:id="@+id/wrist_sdk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal_wrist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/zg_wrist_sdk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zg_wrist"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wrist_sdk"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/sport_watch_sdk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sport_watch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/zg_wrist_sdk"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/i7B_sdk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protobuf_band"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sport_watch_sdk"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="耳机"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sport_watch_sdk"
        android:layout_margin="20dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_sdk_tip"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/i7B_sdk"
        android:layout_margin="20dp"/>

</LinearLayout>
